# corosio

./: .codecov.yml  .coderabbit.yaml  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json
.cursor/rules/: portable-headers.mdc
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench.cpp
bench/asio/: CMakeLists.txt  io_context_bench.cpp  io_context_coro_bench.cpp  socket_latency_bench.cpp  socket_throughput_bench.cpp
bench/common/: benchmark.hpp
bench/corosio/: CMakeLists.txt  io_context_bench.cpp  socket_latency_bench.cpp  socket_throughput_bench.cpp
context/: allocator.md  design.md  javadoc-rule.md  run_on.md  sans-eager.md  tls-context-design.md
doc/: agent-guide.md
doc/modules/ROOT/: nav.adoc
doc/modules/ROOT/pages/: index.adoc  quick-start.adoc
doc/modules/ROOT/pages/concepts/: buffers.adoc
doc/modules/ROOT/pages/guide/: acceptor.adoc  buffers.adoc  concurrent-programming.adoc  io-context.adoc  sockets.adoc  tcp-networking.adoc  tcp-server.adoc
doc/modules/ROOT/pages/io/: sockets.adoc  tls-stream.adoc
doc/modules/ROOT/pages/reference/: design-rationale.adoc  glossary.adoc
doc/modules/ROOT/pages/tutorials/: echo-server.adoc
example/: CMakeLists.txt
example/client/: http_client.cpp
example/echo-server/: CMakeLists.txt  Jamfile  README.md  echo_server.cpp
example/https-client/: https_client.cpp
include/boost/: corosio.hpp
include/boost/corosio/: acceptor.hpp  any_bufref.hpp  basic_io_context.hpp  endpoint.hpp  epoll_context.hpp  io_buffer_param.hpp  io_context.hpp  io_object.hpp  io_result.hpp  io_stream.hpp  iocp_context.hpp  read.hpp  resolver.hpp  resolver_results.hpp  select_context.hpp  signal_set.hpp  socket.hpp  tcp.hpp  tcp_server.hpp  timer.hpp  wolfssl_stream.hpp  write.hpp
include/boost/corosio/detail/: config.hpp  except.hpp  scheduler.hpp  thread_local_ptr.hpp  unique_ptr.hpp
include/boost/corosio/test/: mocket.hpp  socket_pair.hpp
include/boost/corosio/tls/: context.hpp  openssl_stream.hpp  tls_stream.hpp  wolfssl_stream.hpp
include/capy/: affine.hpp  any_allocator.hpp  async_run.hpp  config.hpp  frame_allocator.hpp  make_affine.hpp  run_on.hpp  task.hpp
include/capy/detail/: frame_pool.hpp  recycling_frame_allocator.hpp
include/corosio/: socket.hpp
modules/: boost_corosio.cppm
src/: acceptor.cpp  io_context.cpp  resolver.cpp  socket.cpp
src/corosio/src/: acceptor.cpp  epoll_context.cpp  iocp_context.cpp  resolver.cpp  select_context.cpp  socket.cpp  tcp_server.cpp  timer.cpp
src/corosio/src/detail/: config_backend.hpp  endpoint_convert.hpp  except.cpp  intrusive.hpp  make_err.cpp  make_err.hpp  posix_op.hpp  posix_scheduler.cpp  posix_scheduler.hpp  posix_signals.cpp  posix_signals.hpp  posix_sockets.hpp  resume_coro.hpp  scheduler_op.hpp  socket_service.hpp  timer_service.cpp  timer_service.hpp  win_iocp_resolver_service.cpp  win_iocp_resolver_service.hpp  win_iocp_scheduler.cpp  win_iocp_scheduler.hpp  win_iocp_sockets.cpp  win_iocp_sockets.hpp  win_mutex.hpp  win_overlapped_op.hpp  win_timers.cpp  win_timers.hpp  win_timers_none.hpp  win_timers_nt.cpp  win_timers_nt.hpp  win_timers_thread.cpp  win_timers_thread.hpp  win_wsa_init.cpp  win_wsa_init.hpp
src/corosio/src/detail/epoll/: op.hpp  resolver_service.cpp  resolver_service.hpp  scheduler.cpp  scheduler.hpp  sockets.cpp  sockets.hpp
src/corosio/src/detail/iocp/: completion_key.hpp  mutex.hpp  overlapped_op.hpp  resolver_service.cpp  resolver_service.hpp  scheduler.cpp  scheduler.hpp  sockets.cpp  sockets.hpp  timers.cpp  timers.hpp  timers_none.hpp  timers_nt.cpp  timers_nt.hpp  timers_thread.cpp  timers_thread.hpp  windows.hpp  wsa_init.cpp  wsa_init.hpp
src/corosio/src/detail/posix/: resolver_service.cpp  resolver_service.hpp  signals.cpp  signals.hpp
src/corosio/src/detail/select/: op.hpp  scheduler.cpp  scheduler.hpp  sockets.cpp  sockets.hpp
src/corosio/src/detail/win/: signals.cpp  signals.hpp
src/corosio/src/test/: mocket.cpp  socket_pair.cpp
src/corosio/src/tls/: context.cpp
src/corosio/src/tls/detail/: context_impl.hpp
src/detail/: except.cpp  posix_op.hpp  posix_resolver_service.hpp  posix_scheduler.cpp  posix_scheduler.hpp  posix_sockets.hpp  win_iocp_resolver_service.cpp  win_iocp_resolver_service.hpp  win_iocp_scheduler.cpp  win_iocp_scheduler.hpp  win_iocp_sockets.cpp  win_iocp_sockets.hpp  win_mutex.hpp  win_overlapped_op.hpp  win_wsa_init.cpp  win_wsa_init.hpp  windows.hpp
src/openssl/src/: openssl_stream.cpp
src/src/: acceptor.cpp  io_context.cpp  socket.cpp  tcp.cpp  win_iocp_reactor.cpp  win_iocp_scheduler.cpp  win_iocp_scheduler.hpp  win_iocp_sockets.cpp  win_iocp_sockets.hpp
src/src/detail/: endpoint_convert.hpp  posix_scheduler.cpp  posix_scheduler.hpp  reactive_scheduler.cpp  reactive_scheduler.hpp  win_iocp_scheduler.cpp  win_iocp_scheduler.hpp  win_iocp_sockets.cpp  win_iocp_sockets.hpp  win_overlapped_op.hpp  win_wsa_init.cpp  win_wsa_init.hpp
src/wolfssl/src/: wolfssl_stream.cpp
test/: Jamfile
test/capy/: run_on.cpp  service_provider.cpp  task.cpp
test/cmake_test/: CMakeLists.txt  main.cpp
test/corosio/: platform_reactor.cpp
test/unit/: Jamfile  acceptor.cpp  io_buffer_param.cpp  io_context.cpp  io_result.cpp  mocket.cpp  resolver.cpp  signal_set.cpp  socket.cpp  tcp_server.cpp  timer.cpp
test/unit/test/: mocket.cpp  socket_pair.cpp
test/unit/tls/: cross_ssl_stream.cpp  openssl_stream.cpp  test_utils.hpp  tls_stream.cpp  wolfssl_stream.cpp
